Validate booking API payloads and support multi-day availability checks