@@ -1,5 +1,9 @@
 package org.example.spacesback.controller;
 
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.Max;
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.NotBlank;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.example.spacesback.dto.mapper.BookingMapper;
@@ -11,11 +15,16 @@ import org.example.spacesback.service.BookingService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/bookings")
@@ -35,21 +44,32 @@ public class BookingController {
     }
 
     @GetMapping("/{spaceId}/availability/{date}")
-    public ResponseEntity<?> getAvailabilityGrid(@PathVariable String spaceId, @PathVariable String date) {
+    public ResponseEntity<?> getAvailabilityGrid(
+            @PathVariable String spaceId,
+            @PathVariable String date
+    ) {
         return ResponseEntity.ok(bookingService.getAvailabilityGrid(spaceId, date));
     }
 
     @GetMapping("/{spaceId}/unavailable-dates/{year}/{month}")
-    public ResponseEntity<?> getUnavailableDates(@PathVariable String spaceId, @PathVariable int year, @PathVariable int month) {
-        List<String> dates = bookingService.getUnavailableDates(spaceId, year, month);
-        return ResponseEntity.ok(Map.of("dates", dates));
+    public ResponseEntity<?> getUnavailableDates(
+            @PathVariable String spaceId,
+            @PathVariable int year,
+            @PathVariable int month
+    ) {
+        return ResponseEntity.ok(Map.of(
+                "dates",
+                bookingService.getUnavailableDates(spaceId, year, month)
+        ));
     }
 
     @PostMapping("/availability")
-    public ResponseEntity<?> checkAvailability(@RequestBody AvailabilityRequest req) {
+    public ResponseEntity<?> checkAvailability(@Valid @RequestBody AvailabilityRequest req) {
         boolean available = bookingService.checkAvailability(
                 req.getSpaceId(),
+                req.getPlan(),
                 req.getDate(),
+                req.getEndDate(),
                 req.getStartTime(),
                 req.getEndTime(),
                 req.getRequestedUnits()
@@ -58,7 +78,7 @@ public class BookingController {
     }
 
     @PostMapping("/calculate-price")
-    public ResponseEntity<?> calculatePrice(@RequestBody PriceRequest req) {
+    public ResponseEntity<?> calculatePrice(@Valid @RequestBody PriceRequest req) {
         double price = bookingService.calculatePrice(
                 req.getSpaceId(),
                 req.getPlan(),
@@ -72,24 +92,24 @@ public class BookingController {
     }
 
     @PostMapping
-    public ResponseEntity<?> createBooking(@RequestBody BookingRequest req, Authentication auth) {
+    public ResponseEntity<BookingResponse> createBooking(
+            @Valid @RequestBody BookingRequest req,
+            Authentication auth
+    ) {
         CustomUserDetails userDetails = (CustomUserDetails) auth.getPrincipal();
-        try {
-            Booking booking = bookingService.createBooking(
-                    userDetails.getId(),
-                    req.getSpaceId(),
-                    req.getPlan(),
-                    req.getDate(),
-                    req.getEndDate(),
-                    req.getStartTime(),
-                    req.getEndTime(),
-                    req.getQuantity(),
-                    req.getPaymentMethod()
-            );
-            return ResponseEntity.status(HttpStatus.CREATED).body(BookingMapper.toBookingResponse(booking));
-        } catch (IllegalArgumentException | IllegalStateException e) {
-            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
-        }
+        Booking booking = bookingService.createBooking(
+                userDetails.getId(),
+                req.getSpaceId(),
+                req.getPlan(),
+                req.getDate(),
+                req.getEndDate(),
+                req.getStartTime(),
+                req.getEndTime(),
+                req.getQuantity(),
+                req.getPaymentMethod()
+        );
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(BookingMapper.toBookingResponse(booking));
     }
 
     @GetMapping("/me")
@@ -98,51 +118,71 @@ public class BookingController {
         List<BookingResponse> responses = bookingService.getBookingsByUserId(userDetails.getId())
                 .stream()
                 .map(BookingMapper::toBookingResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(responses);
     }
 
     @PatchMapping("/{id}/cancel")
     public ResponseEntity<?> cancelBooking(@PathVariable Long id, Authentication auth) {
         CustomUserDetails userDetails = (CustomUserDetails) auth.getPrincipal();
-        try {
-            bookingService.cancelBooking(id, userDetails.getId());
-            return ResponseEntity.ok(Map.of("message", "Booking cancelled successfully"));
-        } catch (SecurityException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of("message", e.getMessage()));
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
-        }
+        bookingService.cancelBooking(id, userDetails.getId());
+        return ResponseEntity.ok(Map.of("message", "Booking cancelled successfully"));
     }
 
     @Data
     public static class AvailabilityRequest {
+        @NotBlank
         private String spaceId;
+        @NotBlank
+        private String plan;
+        @NotBlank
         private String date;
+        private String endDate;
+        @Min(0)
+        @Max(23)
         private int startTime;
+        @Min(1)
+        @Max(23)
         private int endTime;
+        @Min(1)
         private int requestedUnits;
     }
 
     @Data
     public static class PriceRequest {
+        @NotBlank
         private String spaceId;
+        @NotBlank
         private String plan;
+        @NotBlank
         private String date;
         private String endDate;
+        @Min(0)
+        @Max(23)
         private int startTime;
+        @Min(1)
+        @Max(23)
         private int endTime;
+        @Min(1)
         private int quantity;
     }
 
     @Data
     public static class BookingRequest {
+        @NotBlank
         private String spaceId;
+        @NotBlank
         private String plan;
+        @NotBlank
         private String date;
         private String endDate;
+        @Min(0)
+        @Max(23)
         private int startTime;
+        @Min(1)
+        @Max(23)
         private int endTime;
+        @Min(1)
         private int quantity;
         private String paymentMethod;
     }
